--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Hussain Omer</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:your.email@example.com">m.hussainomer03@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/<handle>">@hussaino03</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">@hussainomer</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +30,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        University of Toronto
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Computer Science</h3>
                     <ul>
                         <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>Year 1</li>
                     </ul>
                 </div>
             </section>
@@ -52,6 +51,12 @@
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
+                    <li>Java</li>
+                    <li>Kotlin</li>
+                    <li>PostgreSQL</li>
+                    <li>React</li>
+                    <li>Node.js</li>
+
                 </ul>
             </section>
         </article>
