--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,9 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Learned various different technologies such as Microsoft Azure</li>
+                    <li>Got the opportunity to learn essential skills such as about GitHub through different courses</li>
+                    <li>Networked with many different individuals</li>
                 </ul>
             </section>
             <section class="box">
@@ -78,10 +79,11 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>GeeksForGeeks</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>• As a Technical Writer Intern, I'm 
+                        Preparing documentation on topics such as Web Development, and Data Structures/Algorithms. </li>
+                    <li>• Focusing on technologies such as Python and its Libraries, C++, Java, HTML/CSS, and JavaScript.</li>
                 </ul>
             </section>
             <section class="box">
@@ -90,10 +92,12 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>Nucleotide Hackathon</h3>
+                <div>Earth Print</div>
                 <ul>
-                    <li>Cool technology used</li>
+                    <li>Created a prototype for an application to allow the user to track their carbon footprint.</li>
+                    <li>Implemented an EXPRESS REST API to collect information about the user such as their electricity usage.</li>
+                    <li>Used Carbon Interface s API to perform calculations and estimate a score of the user s impact on the climate.</li>
                     <li>Prize won</li>
                 </ul>
             </section>
