--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                     <li>Created a prototype for an application to allow the user to track their carbon footprint.</li>
                     <li>Implemented an EXPRESS REST API to collect information about the user such as their electricity usage.</li>
                     <li>Used Carbon Interface s API to perform calculations and estimate a score of the user s impact on the climate.</li>
-                    <li>Prize won</li>
+                    <li>3rd Place Overall</li>
                 </ul>
             </section>
         </article>
